# now-bottle-nextjs

./: .env.example  .gitignore  .nowignore  next.config.js  now.json  package.json
api/: index.py  profile.py  pyproject.toml  requirements.txt  signin.py  signup.py
api/app/: __init__.py  auth.py  models.py  utils.py
components/: header.js  layout.js  nav.js
pages/: _app.js  index.js  profile.js  signin.js  signup.js
utils/auth/: signin.js  signup.js
