[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["j0lv3r4 <juan@jolvera.dev>"]

[tool.poetry.dependencies]
bottle = "^0.12.17"
passlib = "^1.7"
cryptography = "^2.7"
bcrypt = "^3.1"
itsdangerous = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
